project1/report.txt
CS31 Project 1
Name: Bryan
UID: 206712318

Findings:

Case 1: Negative numbers
Inputs: daysReviewed = -10, daysWithRain = 5, daysBelow50Degrees = 3
Result: 
- Displayed: "-50.00% were rainy" and "-30.00% were cold"
- Program output: "Something looks awry with the numbers..."
Reason: The program calculates percentages without checking if the input is valid first.
While it later warns about negative numbers, it still produces nonsensical negative percentages that don't make sense (you can't have -50% of days).

Case 2: illogical numbers (sum exceeds the total)
Inputs: daysReviewed = 10, daysWithRain = 8, daysBelow50Degrees = 5
Result:
- Displayed: "80.00% were rainy" and "50.00% were cold"
- Program output: "These numbers don't add up..."
Reason: The percentages add up to 130%, which is impossible. While the program detects the error at the end, it still displays the illogical percentages.
A day cannot be both rainy AND cold in this context if the numbers exceed 100%.

Case 3: Divided by zero
Inputs: daysReviewed = 0, daysWithRain = 5, daysBelow50Degrees = 3
Result:
- Displayed: "inf% were rainy" and "inf% were cold"
- Program output: "These numbers don't add up..."
Issue: This is the most serious hidden flaw. When dividing by zero, the program produces "inf" (infinity) instead of rejecting the input or crashing gracefully. This is undefined behavior that produces meaningless output.

======

logic_error.cpp description

Lines 22-23:
I changed the percentage calculation from multiplication to addition. The code compiles successfully (no syntax errors). The program runs without crashing. But it produces completely wrong results

Example with input (30, 12, 8):
- Original program outputs: 40.00% and 26.67% (correct)
- Logic error program outputs: 120.00% and 120.27% (wrong)

The operator precedence means: 100.0 + (12/30) = 100.0 + 0.4 = 100.4
This produces percentages around 100% instead of actual percentages.

The compiler cannot catch this error since the syntax is valid and the types are correct

======

compile_error.cpp description

This file intentionally contains 2 distinct types of compile errors that prevent successful compilation:

Error 1: missing semicolon (Line 28)

cout << pctRainy << "% were rainy." cout << endl;

compiler output:
compile_error.cpp:28:40: error: expected ';' after expression
   28 |     cout << pctRainy << "% were rainy." cout << endl;
      |                                        ^

The compiler sees the first cout statement and expects a semicolon to terminate it.
Instead, it encounters another cout keyword, which is syntactically invalid. This is a syntax error that prevents compilation.

------

Error 2: undefined identifier (Line 40)

cout << "It was " << var << " more often than it rained.";

compiler output:
compile_error.cpp:40:30: error: use of undeclared identifier 'var'
   40 |         cout << "It was " << var << " more often than it rained.";
      |                              ^

The variable 'var' is used in the cout statement but was never declared or defined anywhere in the program.
C++ requires all variables to be declared before they can be used. This is a semantic error: the syntax might look okay, but the identifier doesn't exist, so the compiler cannot build the program.

Both errors prevents the program from compiling, making them true compile errors rather than runtime or logic errors.